objects/SBQQ__RecordJob__c.object
<CustomObject>
    <customHelpPage>SBQQ__RecordJobHelp</customHelpPage>
    <description>Maps records to the Apex Jobs it initiates</description>
    <fields>
        <fullName>SBQQ__IsRead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true the user has been alerted of the record job&apos;s finished status</description>
        <inlineHelpText>If checked the user has been alerted of the record job&apos;s finished status.</inlineHelpText>
        <label>Is Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__JobDetails__c</fullName>
        <description>The details of the background job performed if no job id was specified.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The details of the background job performed if no job id was specified.</inlineHelpText>
        <label>Job Details</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__JobId__c</fullName>
        <description>The Apex Job Id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Job Id</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__JobStatus__c</fullName>
        <description>The status of the background job performed if no job id was specified.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The status of the background job performed if no job id was specified.</inlineHelpText>
        <label>Job Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RecordId__c</fullName>
        <description>The unique key for this record, comprised of the parent record Id and the type of job</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Record Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SBQQ__RedirectUrl__c</fullName>
        <description>Url to redirect to once the job finishes.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Url to redirect to once the job finishes.</inlineHelpText>
        <label>Redirect URL</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__Stacktrace__c</fullName>
        <description>The stacktrace for the error that caused the record job to fail.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The stacktrace of the background job performed if no job id was specified.</inlineHelpText>
        <label>Stacktrace</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Record Job</label>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__RecordId__c</columns>
        <columns>SBQQ__JobId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JOB{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Record Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>